Replicating notice of mailing lists in trunk...
svn path=/software/LOOS/trunk/; revision=11473

--- a/loos.dox
+++ b/loos.dox
@@ -11,9 +11,12 @@ School of Medicine & Dentistry, University of Rochester\n
 \image html gplv3.png
 
 <hr>
-
 <h2>Important News</h2>
-Our email address has changed.  Please use loos.maintainer@gmail.com to contact us regarding LOOS.
+Our email address has changed.  Please use loos.maintainer@gmail.com to contact us regarding LOOS.  We now have two mailing lists available,
+   - <a href="https://lists.sourceforge.net/lists/listinfo/loos-users">LOOS Users</a>
+   - <a href="https://lists.sourceforge.net/lists/listinfo/loos-devel">LOOS Developers</a>
+
+
 <hr>
 
 <h2>Quick Links</h2>
