--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-01-10  Tod Romo  <tromo@gorgoneion>
+
+	* Changed [PyLOOS] GCoord, AtomicGroup, TimeSeries, and Matrix44
+	to be iterable
+	* Added [PyLOOS] TrajectoryIterator for Python iteration through a
+	Trajectory
+
 2013-11-04  Tod Romo  <tromo@ubuntu-mac-12>
 
 	* Added MacOS 10.9 (Mavericks) compatibility
