--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* Changed [PyLOOS] GCoord, AtomicGroup, TimeSeries, and Matrix44
 	to be iterable
-	* Added [PyLOOS] TrajectoryIterator for Python iteration through a
+	* Added [PyLOOS] PyTraj and PyAlignedTraj for Python iteration through a
 	Trajectory
 
 2013-11-04  Tod Romo  <tromo@ubuntu-mac-12>
