--- a/README
+++ b/README
@@ -8,6 +8,19 @@
 Our email address has changed.  Please use <loos.maintainer@gmail.com>
 to contact us regarding LOOS.
 
+   * RELEASE 2.1.1 *
+
+This release includes a minor fix to the LOOS examples and a few improvements
+to PyLOOS.  Some inconsistencies in the Example SConstruct have been corrected.
+In PyLOOS, some sequence like objects (e.g. GCoord, AtomicGroup, TimeSeries, and
+Matrix44) were not iterable Python objects and trying to use them as such would
+fill memory.  These objects will now raise a Python expections and can be used as
+an iterable object.  In addition, we have added two new Python-only trajectory
+classes: PyTraj and PyAlignedTraj.  These wrap a LOOS Trajectory (and AtomicGroup)
+and make it into an iterable Python object.  You can also specify a skip and a
+stride through the trajectory (or provide your own iterator for selecting frames).
+See the class documentation for more details, or look in Packages/PyLOOS.
+
    * RELEASE 2.1.0 *
 
 This release contains several major changes to LOOS.  We have
