--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-01-21    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug in rmsds tool where the average RMSD reported
+	was incorrect (sligthly under when using one trajectory,
+	with large error when using two trajectories)
+
 2014-01-10  Tod Romo  <tromo@gorgoneion>
 
 	* Changed [PyLOOS] GCoord, AtomicGroup, TimeSeries, and Matrix44
