--- a/README
+++ b/README
@@ -10,16 +10,26 @@ to contact us regarding LOOS.
 
    * RELEASE 2.1.1 *
 
-This release includes a minor fix to the LOOS examples and a few improvements
-to PyLOOS.  Some inconsistencies in the Example SConstruct have been corrected.
-In PyLOOS, some sequence like objects (e.g. GCoord, AtomicGroup, TimeSeries, and
-Matrix44) were not iterable Python objects and trying to use them as such would
-fill memory.  These objects will now raise a Python expections and can be used as
-an iterable object.  In addition, we have added two new Python-only trajectory
-classes: PyTraj and PyAlignedTraj.  These wrap a LOOS Trajectory (and AtomicGroup)
-and make it into an iterable Python object.  You can also specify a skip and a
-stride through the trajectory (or provide your own iterator for selecting frames).
-See the class documentation for more details, or look in Packages/PyLOOS.
+This release includes a few bug fixes, including an inconsistency in
+the build script for the examples, and a few improvements to PyLOOS.
+Some inconsistencies in the Example SConstruct have been corrected.
+In PyLOOS, some sequence like objects (e.g. GCoord, AtomicGroup,
+TimeSeries, and Matrix44) were not iterable Python objects and trying
+to use them as such would fill memory.  These objects will now raise a
+Python expections and can be used as an iterable object.  In addition,
+we have added two new Python-only trajectory classes: PyTraj and
+PyAlignedTraj.  These wrap a LOOS Trajectory (and AtomicGroup) and
+make it into an iterable Python object.  You can also specify a skip
+and a stride through the trajectory (or provide your own iterator for
+selecting frames).  See the class documentation for more details, or
+look in Packages/PyLOOS.
+
+We have also addressed an issue with building PyLOOS in MacOS 10.9
+"Mavericks".  There is an apparent problem with how STL containers are
+wrapped.  For now, we have disabled the wrapping of iterator methods
+for STL containers, so member functions such as erase() and begin()
+will not be available in PyLOOS on this platform.
+
 
    * RELEASE 2.1.0 *
 
