--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-31    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Released version 2.1.1
+
 2014-01-29    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Added support for OpenSUSE 13 and Fedora 20
