--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-02-07    <alan@membrane.urmc.rochester.edu>
+
+	* Added new feature to xy_rdf (--reselect) to handle the case where 
+	  molecules move back and forth between leaflets
+
 2014-01-31    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Released version 2.1.1
