copying into LOOS
svn path=/software/LOOS/trunk/; revision=11775

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-02-13    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug where PyTraj was not installed
+
 2014-02-07    <alan@membrane.urmc.rochester.edu>
 
 	* Added new feature to xy_rdf (--reselect) to handle the case where 
