--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-05    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed crash in phasepdb caused by default chunk size setting
+
 2014-02-25    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Added mops and dibmops for molecular order parameters and
