--- a/loos.dox
+++ b/loos.dox
@@ -1339,12 +1339,31 @@ Matlab and Octave.
 
 
 /*! \page Changes Change Log
+\section release213 Version 2.1.3 (X-YY-2014)
+\subsection r213_added_changed Added, Changed, or Otherwise Notable
+<ul>
+  <li> Added two new tool for molecular order parameters: mops and
+       dibmops.  The former computes an average molecular order
+       parameter for a set of trajectories, while the latter bins
+       the order parameter based on lateral distance to the nearest
+       target (e.g. lipopeptide)
+</ul>
+
+\subsection r213_bugs Bugs Fixed
+<ul>
+  <li> Bad HTML code in docs fixed
+  <li> Fixed crashing of phasepdb with default settings
+</ul>
+
+
+
+
 \section release212 Version 2.1.2 (2-14-2014)
 \subsection r212_added_changed Added, Changed, or Otherwise Notable
 <ul>
   <li> Added new feature to xy_rdf (--reselect) to handle case where
        molecules move back and forth between leaflets
-<\ul>
+</ul>
 
 \subsection r212_bugs Bug Fixes
 <ul>
