--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-06    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bad HTML tag in dox
+
 2014-03-05    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed crash in phasepdb caused by default chunk size setting
