--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-14    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Changed default atomic number for new uninitialized atoms from -1 to 0.
+
 2014-03-13    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed help info for dcdinfo 
