--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-04-14    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed build issue when specifying ATLAS_LIBS
+
 2014-04-10    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Added --threshold=f to interdist that will segment the output
