--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-05-06    <alan@membrane.urmc.rochester.edu>
+	* Added new package Voronoi.  Requires numpy and scipy in addition
+	to LOOS.
 2014-04-18    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Added "core" water filter for DensityTools.  An alternative
