added number density option to density dist
svn path=/software/LOOS/trunk/; revision=12492

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-02    <alan@membrane.urmc.rochester.edu>
+    * Added number density option to density-dist
+
 2014-05-06    <alan@membrane.urmc.rochester.edu>
 	* Added new package Voronoi.  Requires numpy and scipy in addition
 	to LOOS.
