Noted changes, along with attributing bug report to Pin-Kuang Lai
svn path=/software/LOOS/branches/grotrr/; revision=12499

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-06-03    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed problems with TRR/XDR support for double precision
+	data (found by Pin-Kuang Lai)
+
 2014-06-02    <alan@membrane.urmc.rochester.edu>
     * Added number density option to density-dist
 
