Fixed problem with XDR/TRR for double precision
svn path=/software/LOOS/branches/release-2.1/; revision=12500

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-03    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug in in TRR/XDR affecting double precision data (found by Pin-Kuang Lai)
+
 2014-02-13    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug where PyTraj was not installed
